
  b) To use the Java 6 javax.script API, you must be running under Java 6.
     Additionally, to use any languages other than Rhino Javascript (which
     comes with Java 6), you must have the add-on JSR 223 scripting engine
     jar file for the scripting language you're using. JSR 223 scripting
     engines are available  "https://scripting.dev.java.net/".


				  -------
				  Changes
				  -------

- The org.clapper.curn.CurnConfig class no longer provides constructors
  that parse the configuration; Such constructors are unsafe, since they
  invoke methods in the parent class that, in turn, call methods that could
  be overridden--and thus could be called on an incompletely constructed
  object. CurnConfig now provides explicit load() methods, instead.

- By default, curn now aborts if it encounters a reference to an undefined
  configuration file variable. Previously, it would simply substitute an
  empty string, but that behavior can lead to some hard-to-debug runtime
  errors. A new -U (--allow-undefined-cfg-vars) command-line option
  restores the original behavior.

- The ScriptOutputHandler no longer supports the BSF objects that had
  to be retrieved via "bsf.lookupBean()". Instead, only the global
  "curn" object is exposed, and it's exposed automatically as a script
  global. For more information, see the "Writing a Script Output Handler"
  section in the "curn User's Guide".

- The Common XML Fixups plug-in:

  a) now does "demoronization" (with apologies to John Walker's
     "demoroniser" tool). Demoronizing is the act of replacing Microsoft
     Windows-specific characters with more reasonable, universal
     values--values that will actually display properly in my Firefox
     browser on Unix or FreeBSD. These annoying characters include the
     Windows 1252 character set's "smart" quotes, trademark symbol, em
     dash, and other characters that don't display properly in non-Windows