@@ -61,12 +61,16 @@ ${channel.url}
 <#if channel.date?exists>
 ${channel.date?string("E, dd MMM, yyyy 'at' HH:mm:ss")}
 </#if>
+<#if (channel.rssFormat?exists)>
+${channel.rssFormat}
+</#if>
 
 <#list channel.items as item>
 ${wrapText (item.title, 4)}
 <#if item.author?exists>
 ${indentText (item.author, 4)}
 </#if>
+
 ${indentText (item.url, 4)}
 <#assign desc = stripHTML(item.description)>
 <#if desc != "">
